Added paper module