@@ -4,6 +4,7 @@ import net.j4c0b3y.api.config.message.Message;
 import net.j4c0b3y.api.config.provider.TypeProvider;
 import net.j4c0b3y.api.config.provider.context.LoadContext;
 import net.j4c0b3y.api.config.provider.context.SaveContext;
+import org.jetbrains.annotations.NotNull;
 
 import java.util.ArrayList;
 import java.util.Collection;
@@ -19,7 +20,7 @@ import java.util.List;
 public class MessageProvider implements TypeProvider<Message> {
 
     @Override
-    public Message load(LoadContext context) {
+    public @NotNull Message load(@NotNull LoadContext context) {
         // If the object is a collection.
         if (context.getObject() instanceof Collection) {
             List<String> parsed = new ArrayList<>();
@@ -39,12 +40,12 @@ public class MessageProvider implements TypeProvider<Message> {
     }
 
     @Override
-    public Object save(SaveContext<Message> context) {
+    public @NotNull Object save(@NotNull SaveContext<Message> context) {
         Message message = context.getObject();
 
         // If the message is one line, return the first line as a string.
         if (message.getLines().size() == 1) {
-            return message.getLines().get(0);
+            return message.getLines().getFirst();
         }
 
         // If the message is multi-line, return all lines as a list.
